metadata server needs to be accessed from VMs not VMMs

--- a/service/service/java/source/etc/workspace-service/metadata.conf
+++ b/service/service/java/source/etc/workspace-service/metadata.conf
@@ -21,7 +21,7 @@ listen=false
 
 
 # host:port
-# This must be an address or hostname that is recognized on the VMM nodes.
+# This must be an address or hostname that is recognized on the VMs.
 
 contact.socket=1.2.3.4:80
 
