--- a/gateway/java/source/etc/ec2client/ec2client.conf
+++ b/gateway/java/source/etc/ec2client/ec2client.conf
@@ -1,1 +1,30 @@
+# your very own EC2 credentials
 
+ec2.key=FILLTHISIN
+ec2.secret=FILLTHISIN
+
+
+# polling frequencies
+
+# how often to check EC2 for termination of running instances
+# (specified in seconds)
+ec2.poll.frequency=30
+
+# how long terminated instances are tracked before being removed
+# from EC2 instance tracker
+# (specified in seconds)
+ec2.instance.expire=3600
+
+# TODO this is temporary?
+# the maximum instance-hours allowed per user
+# needs to be moved into something per user? or just into the DB?
+ec2.user.maxCredits=1000
+
+
+# how frequently to run the user charging cycle
+# (specified in seconds)
+accounting.charge.frequency=40
+
+# how far in advance to charge users for their instances
+# should always be >= the charge frequency
+accounting.charge.lookahead=60
