Units tests for MultiEC2AccessManager, fixed bugs
Also rigged up Spring stuff; needs testing

--- a/gateway/java/source/etc/ec2client/ec2client.conf
+++ b/gateway/java/source/etc/ec2client/ec2client.conf
@@ -1,8 +1,5 @@
-# your very own EC2 credentials
-
-ec2.key=FILLTHISIN
-ec2.secret=FILLTHISIN
-
+# path of file containing ec2 credentials
+ec2.credential.file=/etc/grid-security/ec2-credentials
 
 # polling frequencies
 
@@ -14,12 +11,6 @@ ec2.poll.frequency=30
 # from EC2 instance tracker
 # (specified in seconds)
 ec2.instance.expire=3600
-
-# TODO this is temporary?
-# the maximum instance-hours allowed per user
-# needs to be moved into something per user? or just into the DB?
-ec2.user.maxCredits=1000
-
 
 # how frequently to run the user charging cycle
 # (specified in seconds)
