skeleton of standalone framework

--- a/web/nimbusweb.conf
+++ b/web/nimbusweb.conf
@@ -15,22 +15,6 @@ nimbusweb.ssl.key=var/sslkey.pem
 # IMPORTANT: "nimbusweb.ssl.key" should not be readable from other accounts.
 
 
-
-##################
-# IMPORTANT NOTE #
-##################
-
-# There is an embedded web application file "src/nimbusweb/portal/settings.py"
-# that contains the "real" application settings.
-#
-# If you are NOT using the default standalone system, you need to manually run
-# the "bin/new-conf.sh" script after any configuration changes below OR if you
-# move this directory to a new place on the filesystem.
-#
-# If you are using the standalone system, the "bin/new-conf.sh" script is
-# called for you every launch and you don't need to remember to do this.
-
-
 #############
 # ADMIN KEY #
 #############
@@ -43,4 +27,34 @@ nimbusweb.admin.key=var/adminkey.txt
 
 # IMPORTANT: "nimbusweb.admin.key" should not be readable from other accounts.
 
+
+################
+# DEPENDENCIES #
+################
+
+nimbusweb.django.tgz=lib/Django-1.1.1.tar.gz
+nimbusweb.django.target=lib/django
+
+nimbusweb.cherrpy.tgz=lib/CherryPy-3.1.2.tar.gz
+nimbusweb.django.target=lib/cherrypy
+
+nimbusweb.django-cpserver=lib/django-cpserver
+
+
+#################################
+# NOTE FOR NON-STANDALONE USERS #
+#################################
+
+# There is an embedded web application file "src/nimbusweb/portal/settings.py"
+# that contains the "real" application settings.
+#
+# If you are NOT using the default standalone system, you need to manually run
+# the "src/new-conf.sh" script after any configuration changes below OR if you
+# move this directory to a new place on the filesystem.
+#
+# If you are using the standalone system, the "src/new-conf.sh" script is
+# called for you every launch and you don't need to remember to do this.
+#
+# It is highly recommended that you start with the standalone system and move
+# to something like Django behind Apache or nginx at a later time.
 
