--- a/web/nimbusweb.conf
+++ b/web/nimbusweb.conf
@@ -1,4 +1,3 @@
-
 ###################
 # SSL CERTIFICATE #
 ###################
@@ -8,11 +7,11 @@
 # 
 # Alternatively, you can 1) set your own absolute paths or 2) run the
 # "bin/generate-standalone-ssl-cert.sh" script to replace these files.
+#
+# The "nimbusweb.ssl.key" file should be unreadable from other accounts.
 
 nimbusweb.ssl.cert=var/sslcert.pem
 nimbusweb.ssl.key=var/sslkey.pem
-
-# IMPORTANT: "nimbusweb.ssl.key" should not be readable from other accounts.
 
 
 #############
@@ -22,10 +21,10 @@ nimbusweb.ssl.key=var/sslkey.pem
 # The following file contains a management key that is used to contact the
 # running Nimbus service in order to query it or make changes.  It is generated
 # the first time you start this webapp.
+#
+# The "nimbusweb.admin.key" file should be unreadable from other accounts.
 
 nimbusweb.admin.key=var/adminkey.txt
-
-# IMPORTANT: "nimbusweb.admin.key" should not be readable from other accounts.
 
 
 ################
@@ -34,10 +33,8 @@ nimbusweb.admin.key=var/adminkey.txt
 
 nimbusweb.django.tgz=lib/Django-1.1.1.tar.gz
 nimbusweb.django.target=lib/django
-
 nimbusweb.cherrpy.tgz=lib/CherryPy-3.1.2.tar.gz
 nimbusweb.django.target=lib/cherrypy
-
 nimbusweb.django-cpserver=lib/django-cpserver
 
 
@@ -49,8 +46,8 @@ nimbusweb.django-cpserver=lib/django-cpserver
 # that contains the "real" application settings.
 #
 # If you are NOT using the default standalone system, you need to manually run
-# the "src/new-conf.sh" script after any configuration changes below OR if you
-# move this directory to a new place on the filesystem.
+# the "src/new-conf.sh" script after any configuration changes OR if you move
+# this directory to a new place on the filesystem.
 #
 # If you are using the standalone system, the "src/new-conf.sh" script is
 # called for you every launch and you don't need to remember to do this.
