Second portion of initial version of web/

--- a/autocommon/build.xml
+++ b/autocommon/build.xml
@@ -101,6 +101,15 @@
         <delete dir="${autocommon.build.dir}"/>
     </target>
 
+
+    <!-- *******************************************************************
+         CREATE SPECIAL DISTRIBUTION
+         ******************************************************************* -->
+
+    <target name="webdist" depends="dist">
+        
+    </target>
+
     
     <!-- *******************************************************************
          CLEAN
