--- a/web/nimbusweb.conf
+++ b/web/nimbusweb.conf
@@ -1,57 +1,52 @@
-###################
-# SSL CERTIFICATE #
-###################
+[nimbusweb]
 
+# SSL certificate
+#
 # If these two files do not exist (relative to this conf file), they will be
-# created on the fly.
+# created on the fly when "bin/run-standalone-ssl.sh" is launched
 # 
-# Alternatively, you can 1) set your own absolute paths or 2) run the
-# "bin/generate-standalone-ssl-cert.sh" script to replace these files.
+# Alternatively, you can set your own absolute paths.
 #
-# The "nimbusweb.ssl.key" file should be unreadable from other accounts.
+# The "ssl.key" file should be unreadable from other accounts.
 
-nimbusweb.ssl.cert=var/sslcert.pem
-nimbusweb.ssl.key=var/sslkey.pem
-
-
-#############
-# ADMIN KEY #
-#############
-
-# The following file contains a management key that is used to contact the
-# running Nimbus service in order to query it or make changes.  It is generated
-# the first time you start this webapp.
-#
-# The "nimbusweb.admin.key" file should be unreadable from other accounts.
-
-nimbusweb.admin.key=var/adminkey.txt
+ssl.cert: var/sslcert.pem
+ssl.key: var/sslkey.pem
 
 
-################
-# DEPENDENCIES #
-################
+# Port to run the standalone webserver on.
 
-nimbusweb.django.tgz=lib/Django-1.1.1.tar.gz
-nimbusweb.django.target=lib/django
-nimbusweb.cherrpy.tgz=lib/CherryPy-3.1.2.tar.gz
-nimbusweb.django.target=lib/cherrypy
-nimbusweb.django-cpserver=lib/django-cpserver
+webserver.port: 1443
 
 
-#################################
-# NOTE FOR NON-STANDALONE USERS #
-#################################
+# Print URL
+# When full URLs are printed where the context is for outside use (for example
+# a URL destined for an email) this is the exact base URL used.  Forcing this
+# to be what you want here seems better than trying to deduce, especially given
+# all the scenarios the web application can be hosted in.
+# Example: "https://example.com:1443/nimbus/"
 
-# There is an embedded web application file "src/nimbusweb/portal/settings.py"
-# that contains the "real" application settings.
-#
-# If you are NOT using the default standalone system, you need to manually run
-# the "src/new-conf.sh" script after any configuration changes OR if you move
-# this directory to a new place on the filesystem.
-#
-# If you are using the standalone system, the "src/new-conf.sh" script is
-# called for you every launch and you don't need to remember to do this.
-#
-# It is highly recommended that you start with the standalone system and move
-# to something like Django behind Apache or nginx at a later time.
+print.url: https://localhost:1443/nimbus/
 
+
+# Text that you want displayed on the (public) welcome screen, after the
+# "If you do not have an account, " text on the "/nimbus/" web page.
+
+account.prompt: please send an email requesting access to: nimbus@mcs.anl.gov
+
+
+# Your preferred timezone.
+# See: http://en.wikipedia.org/wiki/List_of_tz_zones_by_name
+
+timezone: America/Chicago
+
+
+# The number of hours that initial login URLs will be valid.  These are URLs
+# that you can send to new users to initially create their account.
+
+token.expire_hours: 12
+
+
+# If debug is 'on', errors in the webapp will produce a ton of information in
+# the browser and the standalone script framework will emit extra output.
+
+debug: off
