Ant build scripts for query api
Also some rigging for spring configuration

--- a/messaging/gt4.0/java/gar-builder/build.properties
+++ b/messaging/gt4.0/java/gar-builder/build.properties
@@ -17,6 +17,7 @@ nimbus.service.main.basedir=${nimbus.basedir}/service/service/java/source/
 nimbus.service.api.basedir=${nimbus.basedir}/service-api/java/source
 nimbus.messaging.gt4_0.basedir=${nimbus.basedir}/messaging/gt4.0/java
 nimbus.messaging.gt4_0-elastic.basedir=${nimbus.basedir}/messaging/gt4.0-elastic/java
+nimbus.messaging.query.basedir=${nimbus.basedir}/messaging/query/java/source
 nimbus.metadata-server.basedir=${nimbus.basedir}/metadata/java/source
 
 ##########################################
@@ -53,6 +54,7 @@ nimbus.messaging.gt4_0.gar.build.bin.dir=${nimbus.messaging.gt4_0.gar.build.dir}
 
 nimbus.service.main.etc.dir=${nimbus.service.main.basedir}/etc
 nimbus.messaging.gt4_0-elastic.etc.dir=${nimbus.messaging.gt4_0-elastic.basedir}/msgbridge/etc
+nimbus.messaging.query.etc.dir=${nimbus.messaging.query.basedir}/etc
 nimbus.messaging.gt4_0.gar.etc.dir=etc
 
 
@@ -83,6 +85,9 @@ nimbus.messaging.gt4_0.msgbridge.lib.dir=${nimbus.messaging.gt4_0.basedir}/msgbr
 
 nimbus.messaging.gt4_0-elastic.msgbridge.dist.dir=${nimbus.messaging.gt4_0-elastic.basedir}/msgbridge/dist/
 nimbus.messaging.gt4_0-elastic.msgbridge.lib.dir=${nimbus.messaging.gt4_0-elastic.basedir}/msgbridge/lib/
+
+nimbus.messaging.query.dist.dir=${nimbus.messaging.query.basedir}/dist/
+nimbus.messaging.query.lib.dir=${nimbus.messaging.query.basedir}/lib/
 
 
 ##################################################################
