--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@ build/
 dist/
 autocontainer/downloads/
 autocontainer/gt/
+web/lib/python/
+web/lib/java/
+web/src/env.sh
+web/src/python/nimbusweb/portal/generated_secrets.py
+web/src/python/nimbusweb/portal/generated_settings.py
+web/var/
