--- a/messaging/query/java/source/etc/query/query.conf
+++ b/messaging/query/java/source/etc/query/query.conf
@@ -1,5 +1,8 @@
 query.spring.path=file://@QUERY_CONFDIR@/other/main.xml
 
+# path of file containing mappings of query access credentials to DNs
+query.usermap.path=/@QUERY_CONFDIR@/users.txt
+
 # Whether query interface should listen on HTTPS
 https.enabled=true
 
