default image procurement

--- a/control/etc/workspace-control/dirs.conf
+++ b/control/etc/workspace-control/dirs.conf
@@ -1,7 +1,7 @@
-# Paths to directories the program needs to use.  If the configurations are
+# Paths to directories the program relies on.  If the configurations are
 # relative, the absolute value is calculated from the base directory.  If the
 # code is 'installed' via setup.py or by whatever means, these should only use
-# the absolute path version.
+# the absolute path syntax.
 
 [wcdirs]
 var: var/workspace-control/
