--- a/control/etc/workspace-control/internal.conf
+++ b/control/etc/workspace-control/internal.conf
@@ -16,14 +16,15 @@ kvm0: qemu+unix:///system
 # implementations are loaded by these configurations.
 # Change these configurations at your peril.
 ################################################################################
-#AsyncNotification: workspacecontrol.defaults.AsyncNotification
-#ImageEditing: workspacecontrol.defaults.ImageEditing
-#ImageProcurement: workspacecontrol.defaults.ImageProcurement
+#AsyncNotification: workspacecontrol.defaults.DefaultAsyncNotification
+#ImageEditing: workspacecontrol.defaults.DefaultImageEditing
+#LocalNetworkSetup: workspacecontrol.defaults.DefaultLocalNetworkSetup
+#NetworkBootstrap: workspacecontrol.defaults.DefaultNetworkBootstrap
+#NetworkLease: workspacecontrol.defaults.DefaultNetworkLease
+#NetworkSecurity: workspacecontrol.defaults.DefaultNetworkSecurity
+
+ImageProcurement: workspacecontrol.defaults.DefaultImageProcurement
 KernelProcurement: workspacecontrol.defaults.DefaultKernelProcurement
-#LocalNetworkSetup: workspacecontrol.defaults.LocalNetworkSetup
-#NetworkBootstrap: workspacecontrol.defaults.NetworkBootstrap
-#NetworkLease: workspacecontrol.defaults.NetworkLease
-#NetworkSecurity: workspacecontrol.defaults.NetworkSecurity
 Platform: workspacecontrol.defaults.lvrt.Platform
 
 ################################################################################
