--- a/control/etc/workspace-control/kernels.conf
+++ b/control/etc/workspace-control/kernels.conf
@@ -3,7 +3,7 @@
 # Kernel directory
 #   - currently the program will look in a directory for kernels
 #   - if this setting is a relative path, it will be resolved from the
-#     workspace-control specific var directory
+#     workspace-control specific var directory (see "dirs.conf")
 
 kerneldir: kernels
 
