--- a/control/etc/workspace-control/logging.conf
+++ b/control/etc/workspace-control/logging.conf
@@ -31,4 +31,4 @@ logfiledir: logs/
 
 
 # Obscure side note: if one of the log levels is set to 0 and the other is set
-# to 1, then both are effectively 0.  But 0 can happily coexist with 2+
+# to 1, then both are effectively 0.  But 0 can happily coexist with 2 or higher
