--- a/control/etc/workspace-control/main.conf
+++ b/control/etc/workspace-control/main.conf
@@ -8,6 +8,13 @@
 num_cpu_per_vm: 1
 
 
+[notifications]
+
+# for asynchronous notifications back to the service (such as a propagation
+# related transfer completing)
+ssh: /usr/bin/ssh
+
+
 ################################################################################
 # You will in normal cases not alter the following settings.
 #
@@ -25,3 +32,5 @@ logging: logging.conf
 libvirt: libvirt.conf
 kernels: kernels.conf
 xen: xen.conf
+images: images.conf
+propagation: propagation.conf
