--- a/control/etc/workspace-control/xen.conf
+++ b/control/etc/workspace-control/xen.conf
@@ -15,12 +15,10 @@ pygrub: /usr/bin/pygrub
 # on_crash - what to do if a VM crashes (kernel issue)?
 #
 # valid values:
-#   - destroy: terminate the VM and release resources from the hypervisor
-#   - restart: reboot the VM from 'scratch' with the same configuration
-#   - preserve: terminated, but kept around for analysis
-#     (NOT FOR NORMAL NIMBUS USE)
-#   - rename-restart: terminated, restarted with new name
-#     (NOT FOR NORMAL NIMBUS USE)
+#   - "destroy": terminate the VM and release resources from the hypervisor
+#   - "restart": reboot the VM from 'scratch' with the same configuration
+#   - "preserve": terminated, but kept around for analysis (NOT FOR NORMAL USE) 
+#   - "rename-restart": terminated, restarted with new name (NOT FOR NORMAL USE)
 
 on_poweroff: destroy
 on_reboot: restart
