asynchronous notifications to service

--- a/control/etc/workspace-control/internal.conf
+++ b/control/etc/workspace-control/internal.conf
@@ -16,13 +16,13 @@ kvm0: qemu+unix:///system
 # implementations are loaded by these configurations.
 # Change these configurations at your peril.
 ################################################################################
-#AsyncNotification: workspacecontrol.defaults.DefaultAsyncNotification
 #ImageEditing: workspacecontrol.defaults.DefaultImageEditing
 #LocalNetworkSetup: workspacecontrol.defaults.DefaultLocalNetworkSetup
 #NetworkBootstrap: workspacecontrol.defaults.DefaultNetworkBootstrap
 #NetworkLease: workspacecontrol.defaults.DefaultNetworkLease
 #NetworkSecurity: workspacecontrol.defaults.DefaultNetworkSecurity
 
+AsyncNotification: workspacecontrol.defaults.DefaultAsyncNotification
 ImageProcurement: workspacecontrol.defaults.DefaultImageProcurement
 KernelProcurement: workspacecontrol.defaults.DefaultKernelProcurement
 Platform: workspacecontrol.defaults.lvrt.Platform
