--- a/control/etc/workspace-control/main.conf
+++ b/control/etc/workspace-control/main.conf
@@ -12,6 +12,7 @@ num_cpu_per_vm: 1
 
 # for asynchronous notifications back to the service (such as a propagation
 # related transfer completing)
+# Can be absolute path. If not, PATH is used for resolution.
 ssh: /usr/bin/ssh
 
 
