image editing (handles mount+edit tasks as well as compression/decompression... this is the module where things like partition extensions would go too)

--- a/control/src/python/workspacecontrol/mocks/etc/main.conf
+++ b/control/src/python/workspacecontrol/mocks/etc/main.conf
@@ -9,6 +9,9 @@
 logging: ../../../../../etc/workspace-control/logging.conf
 dirs: ../../../../../etc/workspace-control/dirs.conf
 kernels: ../../../../../etc/workspace-control/kernels.conf
+mount: ../../../../../etc/workspace-control/mount.conf
+sudo: ../../../../../etc/workspace-control/sudo.conf
+images: ../../../../../etc/workspace-control/images.conf
 
 [libvirt]
 
@@ -18,6 +21,7 @@ vmm: mock
 
 # Real:
 KernelProcurement: workspacecontrol.defaults.DefaultKernelProcurement
+ImageEditing: workspacecontrol.defaults.DefaultImageEditing
 
 
 # This is the default and real workspace control module, but we (above)
@@ -27,8 +31,6 @@ Platform: workspacecontrol.defaults.lvrt.Platform
 
 
 # Mocks:
-
-ImageEditing: workspacecontrol.mocks.ImageEditing
 ImageProcurement: workspacecontrol.mocks.TestProcurement
 LocalNetworkSetup: workspacecontrol.mocks.LocalNetworkSetup
 NetworkBootstrap: workspacecontrol.mocks.NetworkBootstrap
