minor problems with older code

--- a/control/etc/workspace-control/kernels.conf
+++ b/control/etc/workspace-control/kernels.conf
@@ -10,7 +10,7 @@ kerneldir: kernels
 
 # Kernels allowed, separate w/ comma
 #   - cannot specify absolute paths (try using symlinks instead)
-#   - first one in the list is used if kernel is not specified on cmdline
+#   - first one in the list is used if kernel is not specified via service
 
 authz_kernels: fake-vmlinuz-2.6-xen
 
