--- a/control/etc/workspace-control/propagation.conf
+++ b/control/etc/workspace-control/propagation.conf
@@ -1,9 +1,14 @@
 [propagation]
 
+# Possible methods for transferring files to and from the machine.
+#
 # If neither SCP nor GUC is configured, propagation will fail.
 # If you want that, better to disable propagation in the Nimbus service
 # configuration than to let it fail here later on by not finding scp or guc.
-# Both can be configured.
+#
+# Both can be configured, it is the central service that ultimately picks the
+# mechanism used for a particular deployment.
+#
 # Can be absolute path. If not, PATH is used for resolution.
 
 scp: /usr/bin/scp
