implementation/test of NetworkBootstrap

--- a/control/etc/workspace-control/networks.conf
+++ b/control/etc/workspace-control/networks.conf
@@ -34,5 +34,36 @@ default: virbr1
 
 virbr3: 192.168.0.0/24
 virbr4: 192.168.1.0/24
-virbr5: 192.168.2.0/24
 
+
+
+[dhcp-bridges]
+
+# After a bridge is chosen for the VM's NIC, the program needs to know how to
+# let packets through to DHCPd (normally network packets without an IP source
+# address would be rejected).
+# Directing the request to a specific interface only also helps prevent DHCP
+# requests from being broadcast to other VMs or the real network.
+
+# The DHPCd process will be listening for requests on a particular interface.
+
+virbr1: vif0.1
+virbr3: vif0.2
+virbr4: vif0.3
+
+
+[dhcp]
+
+# This is called via sudo to adjust bridging policies and DHCP configurations
+# for VMs.
+#
+# It is called under sudo.  A relevant entry for it must be configured in the
+# sudoers file, see the "sudo.conf" file.
+#
+# Because it is called under sudo, the program, these conf files, and all
+# enclosing directories should be owned by root.
+#
+# If this setting is a relative path, it will be resolved from the
+# workspace-control specific libexec directory (see "dirs.conf")
+
+dhcpconfig: dhcp-config.sh
