--- a/control/src/python/workspacecontrol/mocks/etc/main.conf
+++ b/control/src/python/workspacecontrol/mocks/etc/main.conf
@@ -12,6 +12,7 @@ kernels: ../../../../../etc/workspace-control/kernels.conf
 mount: ../../../../../etc/workspace-control/mount.conf
 sudo: ../../../../../etc/workspace-control/sudo.conf
 images: ../../../../../etc/workspace-control/images.conf
+networks: ../../../../../etc/workspace-control/networks.conf
 
 [libvirt]
 
@@ -22,18 +23,17 @@ vmm: mock
 # Real:
 KernelProcurement: workspacecontrol.defaults.DefaultKernelProcurement
 ImageEditing: workspacecontrol.defaults.DefaultImageEditing
+NetworkBootstrap: workspacecontrol.defaults.DefaultNetworkBootstrap
 
 
 # This is the default and real workspace control module, but we (above)
 # configure libvirt to use the mock driver:
-
 Platform: workspacecontrol.defaults.lvrt.Platform
 
 
 # Mocks:
 ImageProcurement: workspacecontrol.mocks.TestProcurement
 LocalNetworkSetup: workspacecontrol.mocks.LocalNetworkSetup
-NetworkBootstrap: workspacecontrol.mocks.NetworkBootstrap
 NetworkLease: workspacecontrol.mocks.NetworkLease
 NetworkSecurity: workspacecontrol.mocks.NetworkSecurity
 
