--- a/control/etc/workspace-control/internal.conf
+++ b/control/etc/workspace-control/internal.conf
@@ -9,6 +9,17 @@
 xen3: xen+unix:///
 kvm0: qemu+unix:///system
 
+
+[persistence]
+# Persistence allows the program to store some information about current
+# deployed VMs.
+
+# The program uses a directory to store the information.  If this setting is a
+# relative path, it will be resolved from the workspace-control specific var
+# directory (see "dirs.conf").
+persistencedir: persistence
+
+
 [wcimpls]
 ################################################################################
 # Only one outer routine should pick the set of module implementations in order
@@ -16,8 +27,7 @@ kvm0: qemu+unix:///system
 # implementations are loaded by these configurations.
 # Change these configurations at your peril.
 ################################################################################
-#LocalNetworkSetup: workspacecontrol.defaults.DefaultLocalNetworkSetup
-#NetworkBootstrap: workspacecontrol.defaults.DefaultNetworkBootstrap
+#
 #NetworkLease: workspacecontrol.defaults.DefaultNetworkLease
 #NetworkSecurity: workspacecontrol.defaults.DefaultNetworkSecurity
 
@@ -25,6 +35,8 @@ AsyncNotification: workspacecontrol.defaults.DefaultAsyncNotification
 ImageEditing: workspacecontrol.defaults.DefaultImageEditing
 ImageProcurement: workspacecontrol.defaults.DefaultImageProcurement
 KernelProcurement: workspacecontrol.defaults.DefaultKernelProcurement
+LocalNetworkSetup: workspacecontrol.defaults.DefaultLocalNetworkSetup
+NetworkBootstrap: workspacecontrol.defaults.DefaultNetworkBootstrap
 Platform: workspacecontrol.defaults.lvrt.Platform
 
 ################################################################################
