--- a/control/etc/workspace-control/sudo.conf
+++ b/control/etc/workspace-control/sudo.conf
@@ -4,7 +4,7 @@
 sudo: /usr/bin/sudo
 
 
-# PERMISSIONS AND SUDO NOTES:
+# SUDO NOTES:
 #
 # sudo is used for altering/securing the system's networking setup for a VM
 # and for altering images
@@ -16,16 +16,26 @@ sudo: /usr/bin/sudo
 # 
 # ...where "nimbus" is the privileged account that runs workspace-control
 #
-# That configuration is *NOT* handled by any installer script.
+# That configuration task is *NOT* handled by any installer script.
 #
 # For information about sudo, see:
 #     http://www.gratisoft.us/sudo/
 # And:
 #     http://xkcd.com/c149.html
 #
-# "/opt/nimbus/libexec/dhcp-config.sh"" should be owned by root and chmod 700
+
+
+# PERMISSIONS NOTES:
+#
+# The following is a permissions example for one of the programs, the same thing
+# applies to each program called under sudo.
+# 
+# "/opt/nimbus/libexec/dhcp-config.sh" should be owned by root and chmod 700
 #
 # Since we call it via sudo, the default dhcpconfig value
 # "/opt/nimbus/libexec/dhcp-config.sh" implies that not just the script but
 # also the enclosing directories /opt, /opt/nimbus/, and /opt/nimbus/libexec
-# are not writeable by anyone but root. 
+# are not writeable by any account but root. 
+#
+# All of these configuration files and the enclosing directories should also
+# be writeable by no account but root.
