subnet configuration comment

--- a/control/etc/workspace-control/networks.conf
+++ b/control/etc/workspace-control/networks.conf
@@ -45,11 +45,14 @@ virbr4: 192.168.1.0/24
 # Directing the request to a specific interface only also helps prevent DHCP
 # requests from being broadcast to other VMs or the real network.
 
-# The DHPCd process will be listening for requests on a particular interface.
+# The DHPCd process will be listening for requests on a particular interface:
 
 virbr1: vif0.1
 virbr3: vif0.2
 virbr4: vif0.3
+
+# Also note that for each network DHPCd will serve, a "subnet" configuration
+# will be required in dhcpd.conf. See share/workspace-control/dhcpd.conf.example
 
 
 [dhcp]
