--- a/control/etc/workspace-control/sudo.conf
+++ b/control/etc/workspace-control/sudo.conf
@@ -4,6 +4,7 @@
 sudo: /usr/bin/sudo
 
 
+################################################################################
 # SUDO NOTES:
 #
 # sudo is used for altering/securing the system's networking setup for a VM
@@ -11,10 +12,12 @@ sudo: /usr/bin/sudo
 # 
 # Corresponding entries must be in the sudoers file, e.g:
 # 
-#   nimbus ALL=(root) NOPASSWD: /opt/nimbus/libexec/mount-alter.sh
-#   nimbus ALL=(root) NOPASSWD: /opt/nimbus/libexec/dhcp-config.sh
+#    nimbus ALL=(root) NOPASSWD: /opt/nimbus/libexec/mount-alter.sh
+#    nimbus ALL=(root) NOPASSWD: /opt/nimbus/libexec/dhcp-config.sh
+#    nimbus ALL=(root) NOPASSWD: /opt/nimbus/libexec/ebtables-config.sh
 # 
-# ...where "nimbus" is the privileged account that runs workspace-control
+# ...where "nimbus" (on the left) is the privileged account that runs the
+# workspace-control program.
 #
 # That configuration task is *NOT* handled by any installer script.
 #
@@ -22,9 +25,10 @@ sudo: /usr/bin/sudo
 #     http://www.gratisoft.us/sudo/
 # And:
 #     http://xkcd.com/c149.html
-#
+################################################################################
 
 
+################################################################################
 # PERMISSIONS NOTES:
 #
 # The following is a permissions example for one of the programs, the same thing
@@ -39,3 +43,4 @@ sudo: /usr/bin/sudo
 #
 # All of these configuration files and the enclosing directories should also
 # be writeable by no account but root.
+################################################################################
