ebtables conf in networks.conf

--- a/control/etc/workspace-control/networks.conf
+++ b/control/etc/workspace-control/networks.conf
@@ -57,8 +57,7 @@ virbr4: vif0.3
 
 [dhcp]
 
-# This is called via sudo to adjust bridging policies and DHCP configurations
-# for VMs.
+# This is called via sudo to adjust DHCP configurations for VMs.
 #
 # It is called under sudo.  A relevant entry for it must be configured in the
 # sudoers file, see the "sudo.conf" file.
@@ -70,3 +69,20 @@ virbr4: vif0.3
 # workspace-control specific libexec directory (see "dirs.conf")
 
 dhcpconfig: dhcp-config.sh
+
+
+[netsecurity]
+
+# ebtables is called via sudo to adjust bridging policies for VMs.
+#
+# It is called under sudo.  A relevant entry for it must be configured in the
+# sudoers file, see the "sudo.conf" file.
+#
+# Because it is called under sudo, the program, these conf files, and all
+# enclosing directories should be owned by root.
+#
+# If this setting is a relative path, it will be resolved from the
+# workspace-control specific libexec directory (see "dirs.conf")
+
+ebtablesconfig: ebtables-config.sh
+
