Added comments to query API config file.
Disabled interface by default.

--- a/messaging/query/java/source/etc/query/query.conf
+++ b/messaging/query/java/source/etc/query/query.conf
@@ -1,17 +1,32 @@
-query.spring.path=file://@QUERY_CONFDIR@/other/main.xml
+#####################################################################
+# Configuration file for EC2 Query API interface to Nimbus
+####################################################################
 
-# path of file containing mappings of query access credentials to DNs
-query.usermap.path=/@QUERY_CONFDIR@/users.txt
-
-# Whether query interface should listen on HTTPS
-https.enabled=true
+# Whether query interface should listen on HTTPS. Disabled by default. You
+# must configure keystore information below before enabling.
+https.enabled=false
 
 # port number of HTTPS server
 https.port=8080
 
-# path to java keystore file
+# path to Java keystore file, for serving up Query API via SSL.
+# NOTE: this file is not created by the installer (yet). If you don't have
+# an existing Java keystore, see
+# http://docs.codehaus.org/display/JETTY/How+to+configure+SSL#HowtoconfigureSSL-step1
+# for details on creating one. Then place the path here and the password
+# below.
 keystore.path=@QUERY_CONFDIR@/keystore.jks
 
-# password of java keystore
+# password of java keystore specified above
 keystore.password=changeit
+
+
+#################################################################
+# You probably don't want to change anything below here!        #
+#################################################################
+
+query.spring.path=file://@QUERY_CONFDIR@/other/main.xml
+
+# path of file containing mappings of query access credentials to DNs
+query.usermap.path=/@QUERY_CONFDIR@/users.txt
 
