added implementation/tests for NetworkSecurity module

--- a/control/src/python/workspacecontrol/mocks/etc/main.conf
+++ b/control/src/python/workspacecontrol/mocks/etc/main.conf
@@ -12,7 +12,6 @@ kernels: ../../../../../etc/workspace-control/kernels.conf
 mount: ../../../../../etc/workspace-control/mount.conf
 sudo: ../../../../../etc/workspace-control/sudo.conf
 images: ../../../../../etc/workspace-control/images.conf
-networks: ../../../../../etc/workspace-control/networks.conf
 
 [libvirt]
 
@@ -24,6 +23,7 @@ vmm: mock
 KernelProcurement: workspacecontrol.defaults.DefaultKernelProcurement
 ImageEditing: workspacecontrol.defaults.DefaultImageEditing
 NetworkBootstrap: workspacecontrol.defaults.DefaultNetworkBootstrap
+NetworkSecurity: workspacecontrol.defaults.DefaultNetworkSecurity
 
 
 # This is the default and real workspace control module, but we (above)
@@ -35,7 +35,6 @@ Platform: workspacecontrol.defaults.lvrt.Platform
 ImageProcurement: workspacecontrol.mocks.TestProcurement
 LocalNetworkSetup: workspacecontrol.mocks.LocalNetworkSetup
 NetworkLease: workspacecontrol.mocks.NetworkLease
-NetworkSecurity: workspacecontrol.mocks.NetworkSecurity
 
 
 # All of these default objects can be used with the tests even though
@@ -50,3 +49,20 @@ NIC: workspacecontrol.defaults.NIC.DefaultNIC
 NICSet: workspacecontrol.defaults.NICSet.DefaultNICSet
 Parameters: workspacecontrol.defaults.Parameters.DefaultParameters
 RunningVM: workspacecontrol.defaults.RunningVM.DefaultRunningVM
+
+
+[defaultbridge]
+default: virbr1
+
+[bridges]
+virbr3: 10.0.0.0/24
+
+[dhcp-bridges]
+virbr1: vif0.1
+virbr3: vif0.2
+
+[dhcp]
+dhcpconfig: dhcp-config.sh
+
+[netsecurity]
+ebtablesconfig: ebtables-config.sh
