implementation and tests of network lease module

--- a/control/etc/workspace-control/internal.conf
+++ b/control/etc/workspace-control/internal.conf
@@ -17,26 +17,24 @@ kvm0: qemu+unix:///system
 # The program uses a directory to store the information.  If this setting is a
 # relative path, it will be resolved from the workspace-control specific var
 # directory (see "dirs.conf").
+
 persistencedir: persistence
 
 
 [wcimpls]
 ################################################################################
 # Only one outer routine should pick the set of module implementations in order
-# to maintain a coherent program.  In the default 'main' package, those
+# to maintain a coherent program: in the default 'main' package, those
 # implementations are loaded by these configurations.
-# Change these configurations at your peril.
 ################################################################################
-#
-#NetworkLease: workspacecontrol.defaults.DefaultNetworkLease
-#NetworkSecurity: workspacecontrol.defaults.DefaultNetworkSecurity
-
 AsyncNotification: workspacecontrol.defaults.DefaultAsyncNotification
 ImageEditing: workspacecontrol.defaults.DefaultImageEditing
 ImageProcurement: workspacecontrol.defaults.DefaultImageProcurement
 KernelProcurement: workspacecontrol.defaults.DefaultKernelProcurement
 LocalNetworkSetup: workspacecontrol.defaults.DefaultLocalNetworkSetup
 NetworkBootstrap: workspacecontrol.defaults.DefaultNetworkBootstrap
+NetworkLease: workspacecontrol.defaults.DefaultNetworkLease
+NetworkSecurity: workspacecontrol.defaults.DefaultNetworkSecurity
 Platform: workspacecontrol.defaults.lvrt.Platform
 
 ################################################################################
