deployment conf values

--- a/control/etc/workspace-control/logging.conf
+++ b/control/etc/workspace-control/logging.conf
@@ -10,16 +10,17 @@
 
 # Log level for stdout
 
-stdoutloglevel: 3
+stdoutloglevel: 2
 
 
 # By default, the program logs the details of every single invocation to
 # a log directory, one file per invocation.
 
 # Log level for file logs 
-# (keeping this at 1 will help with questions and support queries)
+# Keeping this at 1 (or preferably even 0) will create bigger logs but it will
+# help a lot with questions and support queries.
 
-fileloglevel: 1
+fileloglevel: 0
 
 
 # Path to the log directory (log file names are created dynamically by
