log files clog up git status

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ web/src/env.sh
 web/src/python/nimbusweb/portal/generated_secrets.py
 web/src/python/nimbusweb/portal/generated_settings.py
 web/var/
+control/var/workspace-control/logs/wclog*
