xen3 now working with end to end cloud setup

--- a/control/etc/workspace-control/libvirt.conf
+++ b/control/etc/workspace-control/libvirt.conf
@@ -6,5 +6,5 @@
 #   "kvm0" - http://libvirt.org/drvqemu.html
 #   "mock" - http://libvirt.org/drvtest.html (this does nothing)
 
-vmm: mock
+vmm: xen3
 
