--- a/control/etc/workspace-control/main.conf
+++ b/control/etc/workspace-control/main.conf
@@ -1,11 +1,21 @@
 
 [vmcreation]
 
-# ---------- num_cpu_per_vm ----------
 # The default number of vcpus to assign each created VM.
-# - Commandline values can override this.
+# - Central service's supplied values can override this.
 # - Default is 1 if missing.
+
 num_cpu_per_vm: 1
+
+
+[vmshutdown]
+
+# The default number of seconds to wait for a graceful shutdown before going
+# ahead and "destroying."  A graceful shutdown is usually triggered when the
+# VM files are going to be saved back to the repository.
+# - Default is 15 if missing.
+
+shutdown_wait: 15
 
 
 [notifications]
@@ -13,6 +23,7 @@ num_cpu_per_vm: 1
 # for asynchronous notifications back to the service (such as a propagation
 # related transfer completing)
 # Can be absolute path. If not, PATH is used for resolution.
+
 ssh: /usr/bin/ssh
 
 
