--- a/control/etc/workspace-control/networks.conf
+++ b/control/etc/workspace-control/networks.conf
@@ -12,7 +12,7 @@
 # The name of the bridge to use for every VM NIC without a match in the
 # "bridges" section below.  If blank or missing, there will be no default.
 
-default: virbr1
+default: eth0
 
 
 [bridges]
@@ -32,10 +32,6 @@ default: virbr1
 #    xenbr0: 192.168.0.0-192.168.0.255
 #    virbr8: 172.16.0.0-172.31.255.255
 
-virbr3: 192.168.0.0/24
-virbr4: 192.168.1.0/24
-
-
 
 [dhcp-bridges]
 
@@ -47,13 +43,10 @@ virbr4: 192.168.1.0/24
 
 # The DHPCd process will be listening for requests on a particular interface:
 
-virbr1: vif0.1
-virbr3: vif0.2
-virbr4: vif0.3
+eth0: eth0
 
 # Also note that for each network DHPCd will serve, a "subnet" configuration
 # will be required in dhcpd.conf. See share/workspace-control/dhcpd.conf.example
-
 
 [dhcp]
 
