could be edited often by deployers, move out of internal.conf

--- a/control/etc/workspace-control/libvirt.conf
+++ b/control/etc/workspace-control/libvirt.conf
@@ -8,3 +8,16 @@
 
 vmm: xen3
 
+
+[libvirt_connections]
+
+# You should be able to connect using the "virsh" tool with these strings.
+# For example, if you are using 'xen3' and the value here is "xen:///" you
+# should test a command like "virsh -c xen:///"
+#
+# See the libvirt documentation and adjust this connection string for your
+# particular situation.  You cannot use workspace-control if that command
+# does not work from the *nonroot* account that workspace-control runs as.
+
+xen3: xen:///
+kvm0: qemu:///system
