clarified libvirt connection strings

--- a/control/etc/workspace-control/libvirt.conf
+++ b/control/etc/workspace-control/libvirt.conf
@@ -17,7 +17,16 @@ vmm: xen3
 #
 # See the libvirt documentation and adjust this connection string for your
 # particular situation.  You cannot use workspace-control if that command
-# does not work from the *nonroot* account that workspace-control runs as.
+# does not work from the *non-root* account that workspace-control runs as.
+#
+# To further complicate things, a non-root user can be configured to be a
+# read-only user (able to run virsh commands such as 'list') but the account
+# that runs workspace-control needs to be a read/write user (able to run
+# virsh commands such as 'create' and 'destroy').
+#
+# The workspace-control tool uses a more direct connection to libvirt but if
+# the virsh tool is working with the connection string configured here then
+# that should mean workspace-control will as well.
 
 xen3: xen:///
 kvm0: qemu:///system
