--- a/control/etc/workspace-control/libvirt.conf
+++ b/control/etc/workspace-control/libvirt.conf
@@ -30,3 +30,17 @@ vmm: xen3
 
 xen3: xen:///
 kvm0: qemu:///system
+
+
+###############################################################################
+# Libvirt troubleshooting:
+#
+# If you are using "qemu:///system" or "xen+unix:///" and getting something
+# like:
+#
+#   unable to connect to '/var/run/libvirt/libvirt-sock'
+#
+# ... then libvirtd is not running or there is a permissions problem on the
+# unix domain socket.  See /etc/libvirt/libvirtd.conf for information about
+# socket permissions and restart with "/etc/init.d/libvirtd"
+#
