Derby litters logfiles around. Ignore.

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ web/src/python/nimbusweb/portal/generated_secrets.py
 web/src/python/nimbusweb/portal/generated_settings.py
 web/var/
 control/var/workspace-control/logs/wclog*
+derby.log
