mount+edit for HD images

--- a/control/etc/workspace-control/mount.conf
+++ b/control/etc/workspace-control/mount.conf
@@ -32,3 +32,15 @@ mountdir: mnt
 # *** The tmpdir path must be known to the central Nimbus service
 
 tmpdir: tmp
+
+
+# fdisk is used when an HD image is in use instead of a partition file.  fdisk
+# will be used to determine the offset of the 1st partition inside the HD image
+# 
+# If this setting is empty or missing, mount+edit functionality will be disabled
+# for HD images.
+#
+# If this setting is a relative path, it will be resolved from the PATH
+
+fdisk: /sbin/fdisk
+
