xen and kvm will have different ebtables rules, sadly

--- a/control/etc/workspace-control/networks.conf
+++ b/control/etc/workspace-control/networks.conf
@@ -12,7 +12,7 @@
 # The name of the bridge to use for every VM NIC without a match in the
 # "bridges" section below.  If blank or missing, there will be no default.
 
-default: virbr1
+default: virbr0
 
 
 [bridges]
@@ -38,6 +38,8 @@ virbr4: 192.168.1.0/24
 
 
 [dhcp-bridges]
+
+# *IGNORE* this section for KVM
 
 # After a bridge is chosen for the VM's NIC, the program needs to know how to
 # let packets through to DHCPd (normally network packets without an IP source
@@ -81,8 +83,10 @@ dhcpconfig: dhcp-config.sh
 # Because it is called under sudo, the program, these conf files, and all
 # enclosing directories should be owned by root.
 #
+# Note "xen-ebtables-config.sh" vs. "kvm-ebtables-config.sh"
+#
 # If this setting is a relative path, it will be resolved from the
 # workspace-control specific libexec directory (see "dirs.conf")
 
-ebtablesconfig: ebtables-config.sh
+ebtablesconfig: xen-ebtables-config.sh
 
