--- a/control/etc/workspace-control/sudo.conf
+++ b/control/etc/workspace-control/sudo.conf
@@ -14,10 +14,12 @@ sudo: /usr/bin/sudo
 # 
 #    nimbus ALL=(root) NOPASSWD: /opt/nimbus/libexec/mount-alter.sh
 #    nimbus ALL=(root) NOPASSWD: /opt/nimbus/libexec/dhcp-config.sh
-#    nimbus ALL=(root) NOPASSWD: /opt/nimbus/libexec/ebtables-config.sh
+#    nimbus ALL=(root) NOPASSWD: /opt/nimbus/libexec/xen-ebtables-config.sh
 # 
 # ...where "nimbus" (on the left) is the privileged account that runs the
 # workspace-control program.
+#
+# Note "xen-ebtables-config.sh" vs. "kvm-ebtables-config.sh"
 #
 # That configuration task is *NOT* handled by any installer script.
 #
